tests/macros/trybuild/stack_incompatible_block_dimensions.stderr
error[E0277]: the trait bound `ShapeConstraint: SameNumberOfColumns<Const<2>, Const<3>>` is not satisfied
  --> tests/macros/trybuild/stack_incompatible_block_dimensions.rs:12:12
   |
12 |            a21, a22];
   |            ^^^ the trait `SameNumberOfColumns<Const<2>, Const<3>>` is not implemented for `ShapeConstraint`
   |
   = help: the following other types implement trait `SameNumberOfColumns<D1, D2>`:
             <ShapeConstraint as SameNumberOfColumns<Dyn, D>>
             <ShapeConstraint as SameNumberOfColumns<D, Dyn>>
             <ShapeConstraint as SameNumberOfColumns<D, D>>
   = note: this error originates in the macro `stack` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0282]: type annotations needed
  --> tests/macros/trybuild/stack_incompatible_block_dimensions.rs:11:5
   |
11 | /     stack![a11, a12;
12 | |            a21, a22];
   | |____________________^ cannot infer type
   |
   = note: this error originates in the macro `stack` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `generic_view_mut` found for struct `Matrix<_, Const<3>, _, _>` in the current scope
  --> tests/macros/trybuild/stack_incompatible_block_dimensions.rs:11:5
   |
11 |       stack![a11, a12;
   |  _____^
12 | |            a21, a22];
   | |____________________^ method not found in `Matrix<_, Const<3>, _, _>`
   |
  ::: src/base/matrix_view.rs
   |
   |        generic_slice_mut => generic_view_mut,
   |                             ---------------- the method is available for `Matrix<_, Const<3>, _, _>` here
   |
   = note: the method was found for
           - `Matrix<T, R, C, S>`
   = note: this error originates in the macro `stack` (in Nightly builds, run with -Z macro-backtrace for more info)
